# pyvariantdb

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  Makefile  README.md  pyproject.toml
pyvariantdb/: __init__.py  const.py  download.py  lookup.py
pyvariantdb/assets/: Snakefile  config.yaml
pyvariantdb/scripts/: convert.py  dbsnp2parquet.py
